# CCID

./: meson.build  meson.options
.github/workflows/: build.yml
readers/: Pointman_TD1000.txt  supported_readers.txt
src/: 92_pcscd_ccid.rules  ccid.c  ccid.h  ccid_usb.c  ccid_usb.h  commands.c  commands.h  debug.h  defs.h  ifdhandler.c  misc.h  simclist.c  simclist.h  strlcpycat.h
src/openct/: proto-t1.c  proto-t1.h
src/towitoko/: pps.c
