option('extra_bundle_id',
  type : 'string',
  value : '',
  description : 'appended to the name of the bundle directory')

option('class',
  type : 'boolean',
  description : 'enable the CCIDCLASSDRIVER in Info.plist')

option('pcsclite',
  type : 'boolean',
  description : 'use pcsc-lite debug support')
